split up into files

--- a/index.html
+++ b/index.html
@@ -7,417 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>autokalimba</title>
-  <script type="text/javascript">
-    const AudioContext = window.AudioContext || window.webkitAudioContext;
-    const ctx = new AudioContext();
-    const mix = ctx.createGain();
-    mix.connect(ctx.destination);
-    // mix.type = "";
-    // mix.frequency.value = 400;
-    mix.gain.value = 1.4;
-    const pointers = new Map();
-    const pi = Math.PI;
-    let currentBass = 220.0;
-    let frozenBass = 220.0;
-    let sampleBuf = undefined;
-    let strumSetting = 0.04;
-
-    let sampleBaseFreq = 110;
-
-    function loadInstrument(path) {
-      sampleBaseFreq = /kalimba/.test(path) ? 220 : 110;
-      fetch(path).then(async r => {
-        const blob = await r.blob();
-        const ab = await blob.arrayBuffer();
-        ctx.decodeAudioData(ab, buf => {
-          sampleBuf = buf;
-          console.log(sampleBuf);
-        });
-      });
-    }
-
-    loadInstrument("./guitar.wav");
-
-    function chordFreq(semitones) {
-      let k = currentBass * 2 ** (semitones / 12);
-      console.log(k);
-      if (k < 250) k *= 2;
-      if (k > 650) k /= 2;
-      return k;
-    }
-
-    function semitoneToFrequency(st) {
-      const base = Number(document.querySelector("#base").value);
-      const j = (st + 1200 - base) % 12 + base;
-      return 220 * 2 ** (j / 12);
-    }
-
-    function noteNameToSemitone(note) {
-      return "A BC D EF G ".indexOf(note.charAt(0)) + /♯|#/.test(note) - /♭|b/.test(note);
-    }
-
-    function noteNameToFrequency(note) {
-      return semitoneToFrequency(noteNameToSemitone(note));
-    }
-
-    function makeOsc(freq, gainValue, delay) {
-      const osc = ctx.createBufferSource();
-      const gain = ctx.createGain();
-      gain.gain.value = gainValue;
-      osc.buffer = sampleBuf;
-      osc.connect(gain);
-      osc.gainNode = gain;
-      gain.connect(mix);
-      // osc.frequency.value = freq;
-      osc.playbackRate.value = freq / sampleBaseFreq;
-      osc.start(ctx.currentTime + delay);
-      return osc;
-    }
-
-    window.addEventListener("DOMContentLoaded", (event) => {
-      if (/harp/.test(window.location.href)) document.querySelector(".refresh-link").remove();
-      const fullscreenButton = document.querySelector(".fullscreen-button")
-      if (document.fullscreenEnabled) {
-        fullscreenButton.addEventListener("click", () => {
-          document.body.requestFullscreen()
-            .then(() => screen.orientation.lock('landscape'));
-        });
-      } else {
-        fullscreenButton.style.display = "none";
-      }
-
-      document.querySelector("#select-instrument").onchange = (e) => {
-        console.log(e);
-        loadInstrument(`./${e.target.value}.wav`);
-      }
-      document.querySelector("#gain").onchange = (e) => { mix.gain.value = e.target.value; };
-      document.querySelector("#strum").onchange = (e) => { strumSetting = e.target.value; };
-      const bass = document.querySelector(".bass");
-      const bassButtons = [...document.querySelectorAll(".bass-button")];
-      for (const b of bassButtons) {
-        // Prevent selecting them with long taps:
-        b.addEventListener("pointerdown", (e) => { });
-        b.addEventListener("pointermove", (e) => { });
-        b.addEventListener("touchstart", (e) => { e.preventDefault(); });
-      }
-
-      // This is on "bass" so that clicking and dragging off the button works.
-      [...bassButtons].map(i => i.addEventListener("pointerdown", (e) => {
-        console.log(e);
-        if (!e.target.className.includes("button")) return;
-        console.log(e.pointerId, e.target);
-        const rect = e.target.getBoundingClientRect();
-        const centerX = rect.left + rect.width / 2;
-        const centerY = rect.top + rect.height / 2;
-        const note = e.target.innerText;
-
-        let isFrozen = document.getElementById("freeze").checked;
-        let freq = noteNameToFrequency(note);
-        if (!isFrozen) frozenBass = freq;
-        currentBass = freq;
-        if (isFrozen) freq = frozenBass;
-
-        if (document.getElementById("split-keys").checked) {
-          const fourthLower = e.clientY > rect.top + rect.height * 0.65;
-          e.target.style.background = fourthLower
-            ? "linear-gradient(to bottom, #a99 65%, #f80 65%)"
-            : "linear-gradient(to bottom, #f80 65%, #777 65%)";
-          if (fourthLower) freq = semitoneToFrequency(noteNameToSemitone(note) - 5);
-        } else {
-          e.target.style.background = "#f80";
-        }
-
-        pointers.set(e.pointerId, {
-          centerX: centerX,
-          centerY: centerY,
-          note: e.target.innerText,
-          target: e.target,
-          oscs: [makeOsc(freq / 2, 0.6, 0)],
-        });
-
-        for (const v of pointers.values()) {
-          if (v.voicing) {
-            for (let i = 0; i < v.voicing.length; i++) {
-              // v.oscs[i].frequency.value = chordFreq(v.voicing[i]); 
-              v.oscs[i].playbackRate.value = chordFreq(v.voicing[i]) / sampleBaseFreq;
-            }
-          }
-        }
-      }));
-
-      bass.addEventListener("pointermove", (e) => {
-        // const p = pointers.get(e.pointerId);
-      });
-      function stop(pointerId) {
-        const p = pointers.get(pointerId);
-        if (!p) return;
-        for (const osc of p.oscs) {
-          osc.gainNode.gain.setTargetAtTime(0, ctx.currentTime, 0.01)
-          osc.stop(ctx.currentTime + 0.2);
-        }
-        p.target.style.background = "";
-        pointers.delete(pointerId);
-        // console.log("stop", pointerId);
-      }
-      bass.addEventListener("pointerup", (e) => stop(e.pointerId));
-      bass.addEventListener(
-        "pointerleave",
-        (e) => e.target.className.includes("button") || stop(e.pointerId)
-      );
-
-      const chordButtons = [...document.querySelectorAll(".chord-button")];
-      for (const b of chordButtons) {
-        const voicing = b.attributes["data-chord"].value.split(" ");
-        b.addEventListener("pointerdown", (e) => {
-          e.target.style.background = "#f80";
-          const rect = e.target.getBoundingClientRect();
-          const freqs = voicing.map(f => chordFreq(f)).sort((a,b) => a-b);
-          pointers.set(e.pointerId, {
-            centerX: rect.left + rect.width / 2,
-            centerY: rect.top + rect.height / 2,
-            note: e.target.innerText,
-            target: e.target,
-            voicing: voicing,
-            oscs: freqs.map((freq, i) => {
-              const n = freqs.length;
-              const style = document.getElementById("select-strum-style").value;
-                      console.log(style, strumSetting);
-              const delay =
-                style === "random" ? strumSetting * Math.random() :
-                style === "up" ? strumSetting * i / n :
-                style === "down" ? strumSetting * (n-1-i) / n : 0;
-              return makeOsc(freq, 0.2, delay);
-            }),
-          });
-        });
-        b.addEventListener("pointermove", (e) => {
-          const p = pointers.get(e.pointerId);
-          if (!p) return;
-          const detune = e.clientY - p.centerY;
-          for (const osc of p.oscs) {
-            osc.detune.value = detune * -0.5;
-          }
-        })
-        b.addEventListener("pointerup", (e) => stop(e.pointerId));
-        b.addEventListener(
-          "pointerleave",
-          (e) => stop(e.pointerId)
-        );
-        b.addEventListener("touchstart", (e) => { e.preventDefault(); });
-      }
-
-      // const bassKb = "1qaz2wsx3edc";
-      const bassKb = "2wsx3edc4rfv";
-      const chordKb = "yuiophjkl;nm,./";
-      document.addEventListener("keydown", (e) => {
-        const i = bassKb.indexOf(e.key);
-        if (e.repeat) return;
-        console.log(e, i);
-        if (i >= 0) {
-          const target = bassButtons[i];
-          target.dispatchEvent(new PointerEvent("pointerdown", {
-            pointerId: 999 + i,
-            isPrimary: true,
-          }));
-        }
-        const j = chordKb.indexOf(e.key);
-        if (j >= 0) {
-          const target = chordButtons[j];
-          target.dispatchEvent(new PointerEvent("pointerdown", {
-            pointerId: 1999 + j,
-            isPrimary: true,
-          }))
-        }
-      });
-      document.addEventListener("keyup", (e) => {
-        const i = bassKb.indexOf(e.key);
-        console.log(e, i);
-        if (i >= 0) {
-          stop(999 + i);
-        }
-        const j = chordKb.indexOf(e.key);
-        if (j >= 0) {
-          stop(1999 + j);
-        }
-      })
-    });
-  </script>
-  <style type="text/css">
-    * {
-      box-sizing: border-box;
-    }
-
-    html {
-      height: 100%;
-      width: 100%;
-    }
-
-    body {
-      font-family: 'DejaVu Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: pink;
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      touch-action: pan-x pan-y pinch-zoom;
-    }
-
-    .container {
-      background-color: pink;
-      margin: auto;
-      padding: 0px 10px;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-    }
-
-    .controls {
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      background: pink;
-      position: absolute;
-      display: flex;
-      justify-content: space-between;
-      align-items: stretch;
-    }
-
-    .chords {
-      user-select: none;
-      touch-action: none;
-      background: rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-    }
-
-    .chord-column {
-      display: flex;
-      flex-direction: column;
-      justify-content: end;
-    }
-
-    .middle {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .bass {
-      user-select: none;
-      touch-action: none;
-      background: rgba(0, 0, 0, 0.1);
-      padding: 20px 40px;
-      display: flex;
-      flex-direction: row;
-      align-items: flex-end;
-      justify-content: center;
-    }
-
-    .bass-column {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .button {
-      height: 80px;
-      width: 80px;
-      border-radius: 20px;
-      margin: 1px;
-      background: #a99;
-      font-size: 40px;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      user-select: none;
-      -webkit-tap-highlight-color: transparent;
-    }
-
-    .fullscreen-button-area {
-      position: absolute;
-      top: 20px;
-      left: 4px;
-      z-index: 5;
-      display: flex;
-      flex-direction: column;
-    }
-
-    *:fullscreen .fullscreen-button-area,
-    .fullscreen-button-area:fullscreen {
-      display: none;
-    }
-
-    .refresh-link {
-      user-select: none;
-      position: absolute;
-      top: 4px;
-      right: 4px;
-      z-index: 5;
-    }
-
-    input[type=range][orient=vertical] {
-      writing-mode: bt-lr;
-      /* IE */
-      -webkit-appearance: slider-vertical;
-      /* WebKit */
-      width: 12px;
-      height: 80%;
-      padding: 0 5px;
-    }
-
-    #settings {
-      position: absolute;
-      top: 4px;
-      left: 4px;
-      z-index: 5;
-    }
-
-    label {
-      user-select: none;
-    }
-
-    label[for=settings] {
-      position: absolute;
-      top: 4px;
-      left: 30px;
-      z-index: 5;
-    }
-
-    #settings:checked~.controls {
-      pointer-events: none;
-      opacity: 0.2;
-    }
-
-    #split-keys:checked~.controls .button.bass-button {
-      background: linear-gradient(to bottom, #a99 65%, #777 65%);
-    }
-
-    #horizontal-chords:checked~.controls .chords {
-      flex-direction: column;
-    }
-
-    #horizontal-chords:checked~.controls .chord-column {
-      flex-direction: row;
-    }
-  </style>
+  <script type="text/javascript" src="autokalimba.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
     <div id="fullscreen-button-area" class="fullscreen-button-area">
-      <button style="height:100px;width:100px" class="fullscreen-button">Fullscreen</button>
-      <button style="height:40px;width:100px" onclick="document.getElementById('fullscreen-button-area').remove()">nah I'm good</button>
+      <button class="fullscreen-button">
+        Fullscreen
+      </button>
+      <button onclick="document.getElementById('fullscreen-button-area').remove()">
+        nah I'm good
+      </button>
     </div>
     <input type="checkbox" id="settings"></input>
     <label for="settings">Settings</label>
-    <a class="refresh-link" href="">Refresh</a>
+    <a class="refresh-link" style="display:block" href="">Refresh</a>
     <br>
     <br>
     <input type="checkbox" checked id="split-keys"></input>
@@ -471,7 +77,6 @@
       </div>
       <div class="middle">
         <input id="base" type="range" orient="vertical" min="-12" max="12" value="-3">
-        <input hidden id="freeze" type="checkbox">
       </div>
       <div class="chords">
         <div class="chord-column">
