Timed delay, new instrument

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <option value="random" selected>Random</option>
       <option value="up">Up</option>
       <option value="down">Down</option>
+      <option value="timed">Timed</option>
     </select>
     <br>
     Instrument:
