--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <input type="range" id="tuning" min="-50" max="50" value="0" step="2">
     <output id="tuning-value">0</output>
     <br>
+    <label for="transpose">Transpose</label>
+    <input type="range" id="transpose" min="-5" max="6" value="0" step="1">
+    <output id="transpose-value">0</output>
+    <br>
+    <label for="sharps">Sharps</label>
+    <input type="range" id="sharps" min="0" max="5" value="1" step="1">
+    <output id="sharps-value">0</output>
+    <br>
     <label for="bass-gain">Bass volume</label>
     <input type="range" id="bass-gain" min="0" max="2" value="1" step="0.05">
     <br>
