--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>autokalimba</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <script type="text/javascript" src="autokalimba.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
