--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="middle">
-        <input id="base" type="range" orient="vertical" min="-12" max="12" value="-3">
+        <input id="base" type="range" orient="vertical" min="-12" max="12" value="0" step="12">
       </div>
       <div class="chords">
         <div class="chord-column">
