--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     <input type="range" id="sharps" min="0" max="5" value="1" step="1">
     <output id="sharps-value">0</output>
     <br>
+    <label for="base-step">Step</label>
+    <input type="range" id="base-step" min="0" max="7" value="0" step="1">
+    <output id="base-step-value">0</output>
+    <br>
     <label for="bass-gain">Bass volume</label>
     <input type="range" id="bass-gain" min="0" max="2" value="1" step="0.05">
     <br>
