--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>autokalimba</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <script type="text/javascript" src="autokalimba.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -43,6 +44,10 @@
     <label for="sharps">Sharps</label>
     <input type="range" id="sharps" min="0" max="5" value="1" step="1">
     <output id="sharps-value">0</output>
+    <br>
+    <label for="base-step">Step</label>
+    <input type="range" id="base-step" min="0" max="7" value="0" step="1">
+    <output id="base-step-value">0</output>
     <br>
     <label for="bass-gain">Bass volume</label>
     <input type="range" id="bass-gain" min="0" max="2" value="1" step="0.05">
