Credits in settings

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <label for="hue">Hue</label>
     <input type="range" id="hue" min="-180" max="180" value="0" step="1">
     <br>
-    <a href="https://ko-fi.com/chordbug">Donate</a>
+    By <a href="https://twitter.com/chordbug">Lynn</a> and <a href="https://github.com/lynn/harp/graphs/contributors">friends</a>.
     <br>
-    <a href="https://github.com/lynn/harp/issues">Report issue</a>
+    <a href="https://ko-fi.com/chordbug">Donate</a> / <a href="https://github.com/lynn/harp/issues">Report issue</a>
     <div class="controls">
       <div class="bass">
         <div class="bass-column">
