Adding the possibility to change keys. Not over yet. I need to change the array of chords and bass because they aren't in the right order

--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
     <label for="hue">Hue</label>
     <input type="range" id="hue" min="-180" max="180" value="0" step="1">
     <br>
+    <input type="checkbox" id="change-keys"></input>
+    <label for="change-keys">Change keys</label>
+    <div id="change-keys-outer">
+      <section class="bass">
+        <h3>Bass</h3>
+        <div class="content-keys">
+        </div>
+      </section>
+      <section class="chords">
+        <h3>Chords</h3>
+        <div class="content-keys">
+        </div>
+      </section>
+    </div>
+    <table>
+      
+    </table>
+    <br/>
     By <a href="https://twitter.com/chordbug">Lynn</a> and <a href="https://github.com/lynn/harp/graphs/contributors">friends</a>.
     <br>
     <a href="https://ko-fi.com/chordbug">Donate</a> / <a href="https://github.com/lynn/harp/issues">Report issue</a>
