Fixing issues and made it work

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <input type="checkbox" id="change-keys"></input>
     <label for="change-keys">Change keys</label>
     <div id="change-keys-outer">
-      <section class="bass">
+      <section>
         <h3>Bass</h3>
         <div class="content-keys">
         </div>
       </section>
-      <section class="chords">
+      <section>
         <h3>Chords</h3>
         <div class="content-keys">
         </div>
