--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Fullscreen
       </button>
       <button onclick="document.getElementById('fullscreen-button-area').remove()">
-        nah I'm good
+        Dismiss
       </button>
     </div>
     <input type="checkbox" id="settings"></input>
@@ -71,6 +71,7 @@
     <select name="special-chord" id="select-special-chord">
       <option value="II/,9 14 12 18" selected>II/</option>
       <option value="lyd,11 14 16 18">maj7#11</option>
+      <option value="Δ#5,8 11 12 16">maj7#5</option>
       <option value="mΔ,7 11 12 15">mmaj7</option>
       <option value="7b5,6 10 12 16">7b5</option>
       <option value="2,7 12 14 16">add2</option>
